# wimyviewer

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
src/: cache.js  index.html  main.js  renderer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  decoder.rs  lib.rs  main.rs
