[package]
name = "wimy-viewer"
version = "0.1.0"
edition = "2021"

[package.metadata.tauri]

[lib]
name = "wimy_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
psd = "0.3"
base64 = "0.22"
